@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-12-04 mmichaud <michael.michaud@free.fr>
+  * Improved PostGISWriter : solve case sensitivity problem, list table in
+    alphabetical order without duplicate. Remember layer to table mapping.
+  
 2012-11-30 mmichaud <michael.michaud@free.fr>
   * Add an option in the RunDataStoreQueryPlugIn to insert a ${selection} mark
     in the query. This parameter is replaced by the union of selected
